--- a/public/index.html
+++ b/public/index.html
@@ -3,32 +3,39 @@
 
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>SNode.C Forum</title>
+    <title>SNode.C Forums</title>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
-
+    <link rel="stylesheet" href="css/styles.css">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/hogan.js/2.0.0/hogan.js" type="text/javascript"
         charset="utf-8"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"
         charset="utf-8"></script>
-
     <script src="https://unpkg.com/page/page.js" type="text/javascript" charset="utf-8"></script>
-
     <script src="js/events.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/api/api-service.js" type="text/javascript"></script>
+    <script src="middleware.js" type="text/javascript"></script>
     <script src="routes.js" type="text/javascript"></script>
     <script src="app.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
 <body>
-    <div class="container">
+    <header>
         <nav id="navigation">
-            <ul>
-                <li><a href="home">home</a></li>
-            </ul>
+            <a href="/home">home</a>
+            <a href="/subtopics/new">new subtopic</a>
+            <a href="/login">login</a>
+            <a href="/register">register</a>
         </nav>
-        <section id="content">
-
-        </section>
+        <h1>SNode.C Forums</h1>
+        <p>Welcome to the inofficial SNode.C forums!</p>
+    </header>
+        <main id="content">
+        </main>
+        <footer>
+            <p>created by Ernes Ibrovic, Lisa Lamplmair and <a href="mailto:S2110629008@fhooe.at">Simon Udovicic</a></p>
+            <p>Networked and Distributed Systems</p>
+            <small>SS21/22</small>
+        </footer>
     </div>
 </body>
 
