add login, register, json api call

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         <main id="content">
         </main>
         <footer>
-            <p>created by Ernes Ibrovic, Lisa Lamplmair and <a href="mailto:S2110629008@fhooe.at">Simon Udovicic</a></p>
+            <p>created by Ernes Ibrovic, Lisa Lamplmair and Simon Udovicic</p>
             <p>Networked and Distributed Systems</p>
             <small>SS21/22</small>
         </footer>
