--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
         charset="utf-8"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"
         charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" type="text/javascript"
+        charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"
+        integrity="sha384-qlmct0AOBiA2VPZkMY3+2WqkHtIQ9lSdAsAn5RUJD/3vA5MKDgSGcdmIv4ycVxyn" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/page/page.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/events.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/api/api-service.js" type="text/javascript"></script>
@@ -20,6 +24,8 @@
 
 <body>
     <header>
+        <section id="loginStatus">
+        </section>
         <nav id="navigation">
             <a href="/home">home</a>
             <a href="/subtopics/new">new subtopic</a>
