--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <footer>
             <p>created by Ernes Ibrovic, Lisa Lamplmair and Simon Udovicic</p>
             <p>Networked and Distributed Systems</p>
-            <small>SS21/22</small>
+            <small>SS22</small>
         </footer>
     </div>
 </body>
